--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Mallanna&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+    <div class="header">
+        <div class="navigation">
+            <div class="logo">
+                <img src="images/GB Newell Logo.svg" alt="GB Newell Logo">
+            </div>
+            <a href="#about">About us</a>
+            <a href="#new">New<br />Memorials</a>
+            <a href="#additional">Additional<br />Inscriptions</a>
+            <a href="#contact">Contact Us</a>
+        </div>
+    </div>
+    <div class="main">
+        <div class="container">
+            <div id="about" class="page about">About</div>
+            <div id="new" class="page newMemorials">New</div>
+            <div id="additional" class="page additionalInscriptions">Additional</div>
+            <div id="contact" class="page contact">Contact</div>
+        </div>
+    </div>
+    <div class="footer"></div>
 </body>
+
 </html>
