--- a/index.html
+++ b/index.html
@@ -15,22 +15,57 @@
 <body>
     <div class="header">
         <div class="navigation">
-            <div class="logo">
-                <img src="images/GB Newell Logo.svg" alt="GB Newell Logo">
+            <div class="links">
+                <a href="#about">About us</a>
+                <a href="#new">New<br />Memorials</a>
+                <a href="#additional">Additional<br />Inscriptions</a>
+                <a href="#contact">Contact Us</a>
             </div>
-            <a href="#about">About us</a>
-            <a href="#new">New<br />Memorials</a>
-            <a href="#additional">Additional<br />Inscriptions</a>
-            <a href="#contact">Contact Us</a>
         </div>
     </div>
+    <img class="background-img" src="images/GB Newell Logo.png" alt="">
     <div class="main">
         <div class="container">
-            <div id="about" class="page about">About</div>
-            <div id="new" class="page newMemorials">New</div>
-            <div id="additional" class="page additionalInscriptions">Additional</div>
-            <div id="contact" class="page contact">Contact</div>
-        </div>    
+            <div id="about" class="page about">
+                <h1>GB Newell & Son Memorial Masons</h1>
+                <div class="content">
+                    <div class="picture">
+                    </div>
+                    <div class="description">
+                        <p>We are a small, family run memorial masonry business based in Garforth but serving all areas
+                            of Leeds including Bramley, Pudsey, Morley, Rothwell and Horsforth. With over 39 years
+                            experience in the memorial trade, we pride ourselves on our exceptional reputation for
+                            offering a compassionate and professional memorial service and providing the highest quality
+                            of workmanship to all our customers.
+                            <br /><br />
+                            To talk to us at G.B Newell & Sons Ltd about your individual requirements for memorials,
+                            plaques, headstone vases and renovations throughout Leeds and the surrounding areas, contact
+                            us directly today. We are happy to accommodate local home visits by arrangement and we are
+                            proud members of the British Register of Approved Memorial Masons (BRAMM).
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div id="new" class="page newMemorials">
+                <h1>New Memorials</h1>
+                <div class="content">
+                    <p>
+                        Remember your loved one with a fitting memorial in Leeds and surrounding areas <br />
+                        As our memorials are created especially for you and crafted to your individual specification,
+                        they can truly reflect the personality and life of the family member or friend that you have
+                        lost. With your own special words and our bespoke memorials and designs, we will keep the memory
+                        of your loved one alive.
+                    </p>
+                    <div class="carosel"></div>
+                </div>
+            </div>
+            <div id="additional" class="page additionalInscriptions">
+                Additional
+            </div>
+            <div id="contact" class="page contact">
+                Contact
+            </div>
+        </div>
     </div>
     <div class="footer"></div>
 </body>
