Added image slider (no images yet)
Included the image slider in the "new memorials" section applied Javascript to scroll through the images (...that aren't there yet.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Mallanna&display=swap" rel="stylesheet">
+    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -56,7 +57,16 @@
                         lost. With your own special words and our bespoke memorials and designs, we will keep the memory
                         of your loved one alive.
                     </p>
-                    <div class="carosel"></div>
+                    <div class="carousel">
+                        <div id="left" class="button">&lArr;</div>
+                        <div class="slides">
+                            <div id="slide1" class="slide active">1</div>
+                            <div id="slide2" class="slide">2</div>
+                            <div id="slide3" class="slide">3</div>
+                            <div id="slide4" class="slide">4</div>
+                        </div>
+                        <div id="right" class="button">&rArr;</div>
+                    </div>
                 </div>
             </div>
             <div id="additional" class="page additionalInscriptions">
