Added images to the slider & started Additional Inscription

--- a/index.html
+++ b/index.html
@@ -60,20 +60,24 @@
                     <div class="carousel">
                         <div id="left" class="button">&lArr;</div>
                         <div class="slides">
-                            <div id="slide1" class="slide active">1</div>
-                            <div id="slide2" class="slide">2</div>
-                            <div id="slide3" class="slide">3</div>
-                            <div id="slide4" class="slide">4</div>
+                            <div id="slide1" class="slide active"><img src="images/headstone1.jpg" alt=""></div>
+                            <div id="slide2" class="slide"><img src="images/headstone2.jpg" alt=""></div>
+                            <div id="slide3" class="slide"><img src="images/headstone3.jpg" alt=""></div>
+                            <div id="slide4" class="slide"><img src="images/headstone4.jpg" alt=""></div>
                         </div>
                         <div id="right" class="button">&rArr;</div>
                     </div>
                 </div>
             </div>
             <div id="additional" class="page additionalInscriptions">
-                Additional
+                <h1>Additional Inscriptions</h1>
+                <div class="content">
+                    <div class="additionalHeadstone">e</div>
+                    <div class="description">d</div>
+                </div>
             </div>
             <div id="contact" class="page contact">
-                Contact
+                <h1>Contact Us</h1>
             </div>
         </div>
     </div>
