Added content to "Additional Inscriptions"
Added content and animation using a mix of CSS and .JS. Also removed the scroll bar (possibly just on chrome)

--- a/index.html
+++ b/index.html
@@ -72,8 +72,23 @@
             <div id="additional" class="page additionalInscriptions">
                 <h1>Additional Inscriptions</h1>
                 <div class="content">
-                    <div class="additionalHeadstone">e</div>
-                    <div class="description">d</div>
+                    <div class="additionalHeadstone">
+                        <p class="inscriptionHeading">In<br />Loving Memory<br />Of</p>
+                        <p class="inscriptionName">JOHN SMITH</p>
+                        <p class="inscription">1822 - 1901</p>
+                        <div class="newInscription">
+                            <p class="firstLine inscription">And His Beloved Wife</p>
+                            <p class="secondLine inscriptionName">JOAN SMITH</p>
+                            <p class="thirdLine inscription">1834 - 1902</p>
+                        </div>
+                    </div>
+                    <div class="description">
+                        <p>We can add inscriptions to existing headstones but in most cases this would
+                        involves the removal of the memorial from the cemetery or churchyard. However, we are fully
+                        equipped to add inscriptions at the graveside if necessary. This is usually required for extra
+                        large memorials.</p>
+                        <div class="letter">&#9754; Letter Me</div>
+                    </div>
                 </div>
             </div>
             <div id="contact" class="page contact">
