Attempt to add map to contact page

--- a/index.html
+++ b/index.html
@@ -84,17 +84,41 @@
                     </div>
                     <div class="description">
                         <p>We can add inscriptions to existing headstones but in most cases this would
-                        involves the removal of the memorial from the cemetery or churchyard. However, we are fully
-                        equipped to add inscriptions at the graveside if necessary. This is usually required for extra
-                        large memorials.</p>
+                            involves the removal of the memorial from the cemetery or churchyard. However, we are fully
+                            equipped to add inscriptions at the graveside if necessary. This is usually required for
+                            extra
+                            large memorials.</p>
                         <div class="letter">&#9754; Letter Me</div>
                     </div>
                 </div>
             </div>
             <div id="contact" class="page contact">
                 <h1>Contact Us</h1>
+                <div class="content">
+                    <div class="description">Whether you're looking for a modern, traditional or bespoke headstone at G.B Newell & Sons Ltd,
+                        we can create the perfect memorial for your loved one. Contact us or view our memorials gallery
+                        for details.</div>
+
+                    <div class="contactInfo">
+                        <div class="details">
+                        Tel: 0113 287 2356
+                        Mobile: 07703 328 672
+                        E-mail: memorials@talktalk.net
+
+                        The workshop
+                        Our workshop is open Monday to Friday between 9:00 am and 12:30 pm.
+
+                        The workshop is closed after 12:30 pm due to work being carried out in cemeteries or
+                        churchyards.
+                    </div>
+                    <div class="map">
+                        <iframe src="<iframe src=" https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4713.850303082796!2d-1.3804518788652143!3d53.79081970184877!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487943bdb00621d3%3A0x5c8889cb6bc04099!2sGB%20Newell%20%26%20Son%20Ltd!5e0!3m2!1sen!2suk!4v1684856680870!5m2!1sen!2suk" width="320" height="320" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"
+                    </div>
+                    </div>
+                </div>
             </div>
         </div>
+    </div>
     </div>
     <div class="footer"></div>
 </body>
