--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <h1>GB Newell & Son Memorial Masons</h1>
                 <div class="content">
                     <div class="picture">
+                        <img src="images/pr9.jpg" alt="">
                     </div>
                     <div class="description">
                         <p>We are a small, family run memorial masonry business based in Garforth but serving all areas
@@ -102,13 +103,12 @@
 
                     <div class="contactInfo">
                         <div class="details">
-                            Tel: 0113 287 2356
-                            Mobile: 07703 328 672
-                            E-mail: memorials@talktalk.net
-
-                            The workshop
-                            Our workshop is open Monday to Friday between 9:00 am and 12:30 pm.
-
+                            <u>Contact Details</u><br>
+                            Tel: 0113 287 2356<br>
+                            Mobile: 07703 328 672<br>
+                            E-mail: memorials@talktalk.net<br>
+                            <u>The Workshop</u><br>
+                            Our workshop is open Monday to Friday between 9:00 am and 12:30 pm.<br>
                             The workshop is closed after 12:30 pm due to work being carried out in cemeteries or
                             churchyards.
                         </div>
@@ -124,7 +124,12 @@
         </div>
     </div>
     </div>
-    <div class="footer"></div>
+    <div class="footer">
+        <div class="social">
+            <a target="_blank" href="https://github.com/Newellso1">github</a>
+            <a target="_blank" href="https://www.instagram.com/samnewell91/">instagram</a>
+        </div>
+    </div>
 </body>
 
 </html>
